assets/css/style.css
html {
  min-height: 100vh;
}
body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  color: white;
  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
  background-repeat: no-repeat;
  height: 100vh;
  margin: 0;
  overflow: hidden;
}

#app {
  transition: opacity 0.2s;
  opacity: 1;
}
#app.loading {
  opacity: 0;
  pointer-events: none;
}
#app.loading + .loader {
  opacity: 1;
}
#app:not(.loading) + .loader {
  animation: none;
}
.loader {
  position: absolute;
  top: calc(50% - calc(2.5rem + 60px));
  left: calc(50% - 2.5rem);
  transition: opacity 0.2s;
  pointer-events: none;
  opacity: 0;
}

#background-image-container {
  width: 100%;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  z-index: -1;
}
#background-image-container:empty {
  background-color: rgba(0, 0, 0, 0.5);
}

#background-image-container > img {
  position: fixed;
  top: -4px;
  left: -4px;
  width: calc(100% + 8px);
  height: calc(100vh + 8px);
  object-fit: cover;
  z-index: -1;
  filter: brightness(calc(var(--brightness) / 100));
}

#background-image-container.blur > img {
  filter: blur(4px) brightness(calc(var(--brightness) / 100));
}

#app {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  height: 100%;
  width: 100%;
}

header,
footer {
  width: calc(100% - 2rem);
  padding: 1rem;
  display: flex;
  justify-content: space-between;
}
header {
  align-items: flex-start;
  margin: 0;
  order: -1;
}
footer {
  align-items: flex-end;
}
main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 50%;
  width: 100%;
  transform: translateY(-50%);
}
main > * {
  text-align: center;
}
.clock {
  font-size: 4.5rem;
  font-weight: 400;
  margin: 0;
}
.message {
  margin: 0;
  font-weight: 300;
}
.quote {
  max-width: 25rem;
  width: 45%;
  position: relative;
  margin: 0 0 0.5rem;
}
.quote::after {
  content: ' – ' attr(data-author);
  position: absolute;
  left: 0;
  bottom: 0;
  opacity: 0;
  user-select: none;
  transform: translate(0, 100%);
  transition: transform 0.35s, opacity 0.35s;
}
.quote:hover::after {
  opacity: 1;
  transform: translate(1rem, 100%);
}
#todo-container {
  border-radius: 0.2rem;
  padding: 0.8rem;
  background-color: rgba(0, 0, 0, 0.75);
  font-size: 0.85rem;
  width: 20rem;
}
.todo-header {
  margin-top: 0;
}
#weather {
  display: flex;
  flex-direction: row;
  align-items: center;
}
.wi {
  font-size: 2rem;
  margin-right: 1rem;
}
.weather-container > * {
  margin: 0;
}
.temperature {
  font-weight: 500;
}
.location {
  font-weight: 300;
}

.material.checkbox {
  margin-bottom: 0.25rem;
  margin-right: 2rem;
}

.delete-button {
  position: absolute;
  right: -0.5rem;
  top: 50%;
  transform: translate(100%, -50%);
}
.delete-button:hover {
  transition: color 0.2s;
  color: red;
}

.todo-input {
  margin-top: 1rem;
  background: none;
  border: none;
  color: rgba(255, 255, 255, 0.3);
  transition: color 0.15s;
  padding: 0;
  margin: 0.75rem 0 0 0.2rem;
  width: calc(100% - 2.2rem);
}
.todo-input:focus {
  color: white;
  outline: none;
}
.add-todo {
  border: none;
  background: none;
  background-color: #ccc;
  color: black;
  font-size: 1.25rem;
  border-radius: 0.05rem;
  width: 1.5rem;
  height: 1.5rem;
  padding: 0;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  margin: auto 0 0 auto;
  transition: background-color 0.2s;
  line-height: 1.6rem;
}

.add-todo[disabled] {
  background-color: rgba(255, 255, 255, 0.4);
}

.options > summary {
  list-style-image: url(../cog.svg);
  cursor: pointer;
  padding: 0.1rem;
}
.options > summary:focus {
  outline: none;
}
.options > summary::-webkit-details-marker {
  font-size: 1.5rem;
  transform: translateY(0.15rem);
  background: url(../cog.svg);
  background-repeat: no-repeat;
  color: transparent;
  transition: transform 0.2s;
  transform-origin: center;
}
.options[open] > summary {
  margin-bottom: 0.65rem;
}
.options[open] > summary::-webkit-details-marker {
  transform: translateY(0.15rem) rotate(45deg);
}

.options {
  border-radius: 0.2rem;
  padding: 0.8rem;
  z-index: 4;
}
.options[open] {
  transition: background-color 0.2s;
  background-color: rgba(0, 0, 0, 0.75);
}
.options[open] > *:nth-child(n + 1) {
  margin-bottom: 0.5rem;
}

.settings-button {
  background-color: #1976d2;
  color: white;
  border: none;
  border-radius: 0.1rem;
  padding: 0.25rem 0.5rem;
  display: block;
  cursor: pointer;
}

@media (max-width: 800px) {
  html {
    font-size: 18px;
  }
  #todo-container {
    margin-bottom: 3rem;
  }
  footer {
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
  }
  .quote {
    width: 100%;
    max-width: 100%;
    text-align: center;
  }
  main {
    top: 40%;
  }
}

.pixabay-logo {
  position: absolute;
  top: 0;
  left: calc(50% - 1.5rem);
  width: 3rem;
  height: 3rem;
  transform: translateY(-60%);
  transition: transform 0.3s;
}
.pixabay-logo:hover {
  transform: translateY(0);
}
.pixabay-logo > img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

